--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <title>InstaScam</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <!-- Bootstrap -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-
+    <link href="/bootstrap/css/bootstrap-glyphicons.css" rel="stylesheet">
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/customcss/ourcss.css" rel="stylesheet" >
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.js"></script>
-    <script src="https://unpkg.com/react@15.3.1/dist/react.js"></script>
-    <script src="https://unpkg.com/react-dom@15.3.1/dist/react-dom.js"></script>
-    <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
+    <script src="/js/react.js"></script>
+    <script src="/js/react-dom.js"></script>
+    <script src="/js/browser.min.js"></script>
   </head>
     <style>
 @import url(http://weloveiconfonts.com/api/?family=entypo);
