--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <title>InstaScam</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <!-- Bootstrap -->
-    <link href="/bootstrap/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/customcss/ourcss.css" rel="stylesheet" >
-    <script src="/js/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.js"></script>
-    <script src="/js/react.js"></script>
-    <script src="/js/react-dom.js"></script>
-    <script src="/js/browser.min.js"></script>
+    <link href="/static/bootstrap/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/customcss/ourcss.css" rel="stylesheet" >
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.js"></script>
   </head>
     <style>
 @import url(http://weloveiconfonts.com/api/?family=entypo);
@@ -29,7 +26,7 @@
 
 
 </body>
-<script src="/reactApp.js" type="text/babel"> </script>
+<script src="/static/dist/bundle.js"> </script>
    <script>
         
         $(".user").focusin(function(){
@@ -44,5 +41,4 @@
         $(".inputPassIcon").css("color", "white");
         });
     </script>
-
 </html>
