--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link href="/static/bootstrap/css/bootstrap-glyphicons.css" rel="stylesheet">
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/customcss/ourcss.css" rel="stylesheet" >
+    <link href="/static/bower_components/dropzone/downloads/css/dropzone.css" rel="stylesheet">
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.js"></script>
+    <script src="/static/bower_components/dropzone/downloads/dropzone.min.js"></script>
+    <script src="/static/bower_components/angular-dropzone/lib/angular-dropzone.js"></script>
+
   </head>
     <style>
 @import url(http://weloveiconfonts.com/api/?family=entypo);
