--- a/index.html
+++ b/index.html
@@ -4,45 +4,23 @@
     <title>InstaScam</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <!-- Bootstrap -->
-    <link href="/static/bootstrap/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/customcss/ourcss.css" rel="stylesheet" >
-    <link href="/static/bower_components/dropzone/downloads/css/dropzone.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/bootstrap/js/bootstrap.js"></script>
-    <script src="/static/bower_components/dropzone/downloads/dropzone.min.js"></script>
-    <script src="/static/bower_components/angular-dropzone/lib/angular-dropzone.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
 
   </head>
-    <style>
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-@import url(http://fonts.googleapis.com/css?family=Roboto);
 
-
-
-</style>
 
 </head>
 <body>
+<div ng-include="/static/Templates/navBar.html"></div>
+<ng-view></ng-view>
 
-<div id="InstaScam"></div>
 
 
 
 </body>
-<script src="/static/dist/bundle.js"> </script>
-   <script>
-        
-        $(".user").focusin(function(){
-        $(".inputUserIcon").css("color", "#e74c3c");
-        }).focusout(function(){
-        $(".inputUserIcon").css("color", "white");
-        });
+<script src="/static/angularApp.js"> </script>
 
-        $(".pass").focusin(function(){
-        $(".inputPassIcon").css("color", "#e74c3c");
-        }).focusout(function(){
-        $(".inputPassIcon").css("color", "white");
-        });
-    </script>
 </html>
